--- a/Web.config
+++ b/Web.config
@@ -1,17 +1,60 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/G2559_authWanhatAutot.aspx" name=".ASPXAUTH" slidingExpiration="true" timeout="1440" path="/" defaultUrl="~/G2559_WanhatAutotMuokkaus.aspx">
+        <credentials passwordFormat="Clear">
+          <user name="Jinta-Rouppi" password="rinta-jouppi" />
+        </credentials>
+      </forms>
+    </authentication>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </assemblies>
+      <buildProviders>
+        <add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" />
+      </buildProviders>
+    </compilation>
+    <httpRuntime targetFramework="4.5" />
+  </system.web>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+  </entityFramework>
   <connectionStrings>
-    <add name="Ilmot" 
+    <add name="Ilmot"
          connectionString="Data Source=eight.labranet.jamk.fi;Initial Catalog=DemoxOy;Persist Security Info=True;User ID=koodari;Password=koodari13"
          providerName="System.Data.SqlClient" />
+    <add name="ViiniConnectionString1" connectionString="Data Source=eight.labranet.jamk.fi;Initial Catalog=Viini;Persist Security Info=True;User ID=koodari;Password=koodari13" providerName="System.Data.SqlClient" />
+    <add name="DemoxOyEntities" connectionString="metadata=res://*/App_Code.DemoxOy.csdl|res://*/App_Code.DemoxOy.ssdl|res://*/App_Code.DemoxOy.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=eight.labranet.jamk.fi;initial catalog=DemoxOy;persist security info=True;user id=koodari;password=koodari13;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="autokantaEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\autokanta.sdf&quot;" providerName="System.Data.EntityClient" />
+    <add name="koeharjotteluEntities" connectionString="metadata=res://*/App_Code.vehjemodel.csdl|res://*/App_Code.vehjemodel.ssdl|res://*/App_Code.vehjemodel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\koeharjottelu.sdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-
-  <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
-  </system.web>
+  <appSettings>
+    <add key="LogFilePath1" value="~/App_Data/Työntekijät2013.xml" />
+    <add key="LogFilePath2" value="~/App_Data/t3b_tunnukset.xml" />
+    <add key="LogFilePath3" value="~/App_Data/tuntikirjanpito.xml" />
+    <add key="DataBasePath" value="App_Data/" />
+    <add key="ika" value="35" />
+    <add key="palkka" value="3000" />
+    <add key="backgroundColor" value="#057ab5" />
+    <add key="backgroundColorValipalaute" value="#44bf4d" />
+    <add key="finnkinoteatterit" value="http://www.finnkino.fi/xml/TheatreAreas/" />
+    <add key="finnkinoelokuvat" value="http://www.finnkino.fi/xml/Schedule/?area=" />
+    <add key="rssfeeditMS" value="http://www.microsoft.com/presspass/rss/TopStory.xml" />
+    <add key="rssfeeditSF" value="http://www.suomikiekko.com/category/smliiga/feed/" />
+    <add key="rssfeeditIS" value="http://www.iltasanomat.fi/rss/uutiset.xml/" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
